frontend/src/assets/stylesheets/modal/spot_modal.css
@import '../variables.css';

.spot.modal-container {
  width: 100%;
  height: 100%;
}

.spot.modal-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  position: fixed;
  top: 0;
  left: 0;
  box-sizing: border-box;
  padding: 5%;
  background: white;  
  width: 100%;
  height: 100%;
  z-index: 3;
}

/* Spot modal images styling */

.modal-main-image-wrapper {
  display: flex;
  flex-direction: row;
  align-items: center; 
  width: 65%;
  height: 100%;
}

.selected-image-wrapper {
  position: relative;
  overflow: hidden;
  border-radius: 15px;
  margin: 0 8%;
  width: 90%;
  padding-top: 65%;
}

.selected-image-wrapper img {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
}

/* Modal nav arrows styling */

.prev-arrow,
.next-arrow {
  width: 2%;
}

.prev-arrow-icon-wrapper:hover,
.next-arrow-icon-wrapper:hover {
  cursor: pointer;
}

/* Sidebar images styling */

.side-images-wrapper { 
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  margin-top: -3%;
  width: 27%;
  height: 100%;
}

.close-wrapper {
  width: 7%;
}

.close-wrapper:hover {
  cursor: pointer;
}

.close-wrapper img {
  width: 100%;
}

.spot.thumbnails-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  flex-wrap: wrap;
  align-content: flex-start;
  width: 100%;
  margin-top: 8%;
}

.spot.image-wrapper {
  position: relative;
  width: 5em;
  height: 5em;
  overflow: hidden;
  border-radius: 7px;
  box-sizing: border-box;
  border: 2.5px solid transparent;
  opacity: 0.5;
  margin-bottom: 1em;
}

.spot.image-wrapper:hover {
  opacity: 1;
  transition: ease-in-out 0.25s;
  cursor: pointer;
}

.spot.image-wrapper.active {
  border: 2.5px solid var(--dark-gray);
  opacity: 1;
}

.spot.image-wrapper img {
  position: absolute;
  left: -35%;
  width: 200%;
}

/* Spot modal numbering styling */

.numbering-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  width: 100%;
  margin-top: 15%;
}

.numbering-wrapper p {
  font-family: 'cerealMedium';
  font-size: 1em;
  color: var(--medium-gray);
}

